--- a/index.html
+++ b/index.html
@@ -8,18 +8,13 @@
     <title>Biblioteca Start</title>
 </head>
 <body>
-<h1>
-    Biblioteca Start
-</h1>
-
-
-
-
-
-
-
-
-
-    
+  <header>
+    <span class="cabeçalho_menu-hamburger">
+    </span>
+    <img src="imagens/Logo.svg.png" alt="logo da biblioteca">
+    <a href="#"><img src="imagens/Favoritos.svg" alt="favoritos"></a>
+    <a href="#"><img src="imagens/Emprestimos.svg.png" alt="empréstimos"></a>
+    <a href="#"><img src="imagens/Usuario.svg.png" alt="usuário"></a>
+</header>
 </body>
 </html>
