--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <span class="cabeçalho_menu-hamburger">
     </span>
     <img src="imagens/Logo.svg.png" alt="logo da biblioteca">
-    <a href="#"><img src="imagens/Favoritos.svg" alt="favoritos"></a>
-    <a href="#"><img src="imagens/Emprestimos.svg.png" alt="empréstimos"></a>
-    <a href="#"><img src="imagens/Usuario.svg.png" alt="usuário"></a>
+    <a href="#"><img src="imagem/" alt="favoritos"></a>
+    <a href="#"><img src="imagem/Emprestimos.svg.png" alt="empréstimos"></a>
+    <a href="#"><img src="imagem/Usuario.svg.png" alt="usuário"></a>
 </header>
 </body>
 </html>
