--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <span class="cabeçalho_menu-hamburger">
     </span>
     <img src="imagens/Logo.svg.png" alt="logo da biblioteca">
-    <a href="#"><img src="imagem/" alt="favoritos"></a>
+    <a href="#"><img src="imagem/Favoritos.svg" alt="favoritos"></a>
     <a href="#"><img src="imagem/Emprestimos.svg.png" alt="empréstimos"></a>
     <a href="#"><img src="imagem/Usuario.svg.png" alt="usuário"></a>
 </header>
