--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 </head>
 <body>
   <header>
-    <span class="cabeçalho_menu-hamburger">
-    </span>
+    <span class="cabeçalho_menu-hamburger"></span>
     <img src="imagens/Logo.svg.png" alt="logo da biblioteca">
     <a href="#"><img src="imagem/Favoritos.svg" alt="favoritos"></a>
     <a href="#"><img src="imagem/Emprestimos.svg.png" alt="empréstimos"></a>
