--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <span class="cabeçalho_menu-hamburger"></span>
-    <img src="imagens/Logo.svg.png" alt="logo da biblioteca">
+    <img src="imagem/Logo.svg.png" alt="logo da biblioteca">
     <a href="#"><img src="imagem/Favoritos.svg" alt="favoritos"></a>
     <a href="#"><img src="imagem/Emprestimos.svg.png" alt="empréstimos"></a>
     <a href="#"><img src="imagem/Usuario.svg.png" alt="usuário"></a>
