--- a/index.html
+++ b/index.html
@@ -9,11 +9,18 @@
 </head>
 <body>
   <header>
+    <div class="div-1">
     <span class="cabeçalho_menu-hamburger"></span>
     <img src="imagem/Logo.svg.png" alt="logo da biblioteca">
+    <h1>
+      BIBLIOTECA ALURA
+    </h1>
+  </div>
+  <div class="div-1">
     <a href="#"><img src="imagem/Favoritos.svg" alt="favoritos"></a>
     <a href="#"><img src="imagem/Emprestimos.svg.png" alt="empréstimos"></a>
     <a href="#"><img src="imagem/Usuario.svg.png" alt="usuário"></a>
+  </div>
 </header>
 </body>
 </html>
