--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Biblioteca Start</title>
 </head>
 <body>
-  <header>
+  <header class="cabeçalho">
     <div class="div-1">
     <span class="cabeçalho_menu-hamburger"></span>
     <img src="imagem/Logo.svg.png" alt="logo da biblioteca">
