--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>Biblioteca Start</title>
 </head>
 <body>
-  <header class="cabeçalho">
+  <header class="cabecalho">
     <div class="div-1">
-    <span class="cabeçalho_menu-hamburger"></span>
+    <span class="cabecalho_menu-hamburger"></span>
     <img src="imagem/Logo.svg.png" alt="logo da biblioteca">
     <h1>
       BIBLIOTECA ALURA
