--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <span class="cabecalho_menu-hamburger"></span>
     <img src="imagem/Logo.svg.png" alt="logo da biblioteca">
     <h1>
-      BIBLIOTECA ALURA
+      BIBLIOTECA START
     </h1>
   </div>
   <div class="div-1">
