--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header class="cabecalho">
     <div class="div-1">
     <span class="cabecalho_menu-hamburger"></span>
-    <img src="imagem/Logo.svg.png" alt="logo da biblioteca">
+    <img src="imagem/Logo.svg.png" alt="logo-biblioteca">
     <h1>
       BIBLIOTECA START
     </h1>
