--- a/index.html
+++ b/index.html
@@ -1,29 +1,43 @@
 <!DOCTYPE html>
 <html lang="pt">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="reset.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="styles/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <title>Biblioteca Start</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <title>Biblioteca Start</title>
 </head>
+
 <body>
   <header class="cabecalho">
     <div class="div-1">
-    <span class="cabecalho_menu-hamburguer"></span>
-    <img src="imagem/Logo.svg.png" alt="logo-biblioteca">
-    <h1>
-      BIBLIOTECA START
-    </h1>
-  </div>
-  <div class="div-1">
-    <a href="#"><img src="imagem/Favoritos.svg" alt="favoritos"></a>
-    <a href="#"><img src="imagem/Emprestimos.svg.png" alt="empréstimos"></a>
-    <a href="#"><img src="imagem/Usuario.svg.png" alt="usuário"></a>
-  </div>
-</header>
+      <input type="checkbox" id="menu" class="div-menu">
+      <label for="menu">
+        <span class="cabecalho_menu-hamburguer"></span>
+      </label>
+      <img src="imagem/Logo.svg.png" alt="logo-biblioteca">
+      <h1>
+        BIBLIOTECA START
+      </h1>
+      <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </div>
+    <div class="div-1">
+      <a href="#"><img src="imagem/Favoritos.svg" alt="favoritos"></a>
+      <a href="#"><img src="imagem/Emprestimos.svg.png" alt="empréstimos"></a>
+      <a href="#"><img src="imagem/Usuario.svg.png" alt="usuário"></a>
+    </div>
+  </header>
 </body>
+
 </html>
