--- a/index.html
+++ b/index.html
@@ -4,22 +4,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="reset.css">
-  <link rel="stylesheet" href="styles/style.css">
+  <link rel="st    .div-menu{
+    display: none;
+}ylesheet" href="reset.css">
+  <link rel="st    .div-menu{
+    display: none;stst
+}ylesheet" href="styles/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.cstom/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
   <title>Biblioteca Start</title>
-</head>
+</head>    .div-menu{
+  display: none;
+}
 
 <body>
-  <header class="cabecalho">
-    <div class="div-1">
+  <header class="cabecalho">ststst
+    <div class="div-1">vg.png" alt="usuário"></a>
+    </div>
       <input type="checkbox" id="menu" class="div-menu">
-      <label for="menu">
+      <label fo    .div-menu{
+        display: none;
+    }r="menu">
         <span class="cabecalho_menu-hamburguer"></span>
       </label>
-      <img src="imagem/Logo.svg.png" alt="logo-biblioteca">
+      <img src="imagem/Logo.svg.png" altst=st"logo-biblioteca">
       <h1>
         BIBLIOTECA START
       </h1>
@@ -27,9 +36,9 @@
         <li class="lista-menu-titulo"> CATEGORIAS </li>
         <li class="lista-menu-item"> <a href="#" class="lista-menu-link"> AVENTURA</a></li>
         <li class="lista-menu-item"> <a href="#" class="lista-menu-link"> BIOGRAFIA</a></li>
-        <li class="lista-menu-item"> <a href="#" class="lista-menu-link"> FICÇÃO CIENTIFICA</a></li>
+        <li class="lista-menu-item"> <a sthref="#" class="lista-menu-link"> FICÇÃO CIENTIFICA</a></li>
         <li class="lista-menu-item"> <a href="#" class="lista-menu-link"> ROMANCE</a></li>
-        <li class="lista-menu-item"> <a href="#" class="lista-menu-link"> VESTIBULAR</a></li>
+        <li class="lista-menu-item"> <a hrestf="#" class="lista-menu-link"> VESTIBULAR</a></li>
       </ul>
     </div>
     <div class="div-1">
