--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
     <div class="div-1">vg.png" alt="usuário"></a>
     </div>
       <input type="checkbox" id="menu" class="div-menu">
-      <label fo    .div-menu{
-        display: none;
-    }r="menu">
+      <label>
         <span class="cabecalho_menu-hamburguer"></span>
       </label>
       <img src="imagem/Logo.svg.png" altst=st"logo-biblioteca">
