--- a/index.html
+++ b/index.html
@@ -14,10 +14,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.cstom/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
   <title>Biblioteca Start</title>
-</head>    .div-menu{
-  display: none;
+</head> 
 }
-
 <body>
   <header class="cabecalho">ststst
     <div class="div-1">vg.png" alt="usuário"></a>
