--- a/index.html
+++ b/index.html
@@ -15,14 +15,12 @@
   <link href="https://fonts.googleapis.cstom/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
   <title>Biblioteca Start</title>
 </head> 
-}
 <body>
-  <header class="cabecalho">ststst
-    <div class="div-1">vg.png" alt="usuário"></a>
-    </div>
+  <header class="cabecalho">
+    <div class="div-1">
       <input type="checkbox" id="menu" class="div-menu">
-      <label>
-        <span class="cabecalho_menu-hamburguer"></span>
+      <label for="menu">
+        <span class="cabecalho_menu-hamburguer" class="div-imagem"></span>
       </label>
       <img src="imagem/Logo.svg.png" altst=st"logo-biblioteca">
       <h1>
@@ -44,5 +42,4 @@
     </div>
   </header>
 </body>
-
 </html>
