--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <label for="menu">
         <span class="cabecalho_menu-hamburguer" class="div-imagem"></span>
       </label>
-      <img src="imagem/Logo.svg.png" altst=st"logo-biblioteca">
+      <img src="imagem/Logo.svg.png" alt="logo-biblioteca">
       <h1>
         BIBLIOTECA START
       </h1>
