--- a/index.html
+++ b/index.html
@@ -4,12 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="st    .div-menu{
-    display: none;
-}ylesheet" href="reset.css">
-  <link rel="st    .div-menu{
-    display: none;stst
-}ylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="styles/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.cstom/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
